# OS.rs

./: README.md
get-osai-os-ready/: README.md  lets-rust-now.sh  macos-lets-rust-now.sh.sh
get-osai-os-ready/Layers/: Cargo.toml  startersv.sh
get-osai-os-ready/Layers/src/: main.rs
infra/: .gitignore  README.md
infra/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
infra/environments/dev/scripts/: macos-starters.sh  starters.sh
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  output.tf  variable.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
infra/scripts/: startup.sh
osai-agent/: README.md  docker-compose.storage.yml
osai-agent/models/: README.md
osai-agent/scripts/: ensure-rustfs-bucket.sh  run-memory-worker.sh
osai-agent/src/: ask.rs  ask_plan.rs  cognee_lifecycle.rs  fact_pack.rs  intent.rs  main.rs
osai-agent/web/: app.css  app.js  index.html  osai-3d.js
